[package]
name = "aco_bbp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.8.5", features = ["std_rng"] }
nalgebra = "0.32.2"
itertools = "0.10.2"
ecrs = { path = "../ecrs", features = ["aco"] }
time-graph = { version = "0.3.0", features = ["table"] }
rayon = "1.7.0"
smallvec = "1.10.0"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "bin_ant"
harness = false
